# PrimaryCanary.github.io

./: Makefile  README.md  app.js  crafting-interpreters.code-workspace  deno.json  index.css  index.html  link.html  loxogon.wasm  notes.md  style.css
.devcontainer/: devcontainer.json
doubly-linked-list/: CMakeLists.txt
doubly-linked-list/src/: main.c
js/: ab-star.js  ab_star_test.js  an_b2n_test.js  dfa.js  even_zeroes_test.js  pda.js  simulator.js  stack.js  stack_test.js
js/automata/: ab_star.js  an_b2n.js  even_zeroes.js
loxogon/: go.mod  lexer.lox  main.go
loxogon/ast/: ast.go  tokens.go
loxogon/bad/: bad.go
loxogon/cmd/loxogon/: main.go
loxogon/cmd/wasm/: main_wasm.go
loxogon/environment/: environment.go
loxogon/interpreter/: environment.go  interpreter.go  interpreter_test.go  lox_object.go
loxogon/lexer/: lexer.go  lexer_test.go
loxogon/parser/: parser.go  parser_test.go
loxogon/token/: token.go
pages/: advanced-css.html  box-demo.html  explanation.html  link.html
playground/: app.js  index.html
scripts/: automata_to_json.js  box-demo.js  pre-commit
styles/: advanced.css  box-demo.css  explanation.css  index.css  navbar.css
